# rs-dict

./: Cargo.toml  LICENSE  README.md  html.html
src/: args.rs  main.rs  utils.rs
src/ordnet_dk/: Cargo.toml  README.md
src/ordnet_dk/src/: lib.rs  parser.rs  requests.rs  utils.rs
src/ordnet_dk/tests/: requests.rs
